Fixed mobile overflow

--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,9 @@
   --bg-color6: #6d43e6;
 
   scroll-behavior: smooth;
+}
+
+#root {
   overflow: hidden;
 }
 
